K8/depoly.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dotnet
  namespace: pragnya
  labels:
    app: dotnet
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dotnet
  template:
    metadata:
      labels:
        app: dotnet
    spec:
      containers:
      - name: dotnet
        image: pragnyasai22/dotnet:1.0.1
        ports:
        - containerPort: 5000
